<resources>
    <string name="app_name">Office Hour Center</string>

    <!--LogIn and SignUp Activity-->
    <string name="userName">User name</string>
    <string name="password">Password</string>
    <string name="password2">Re-check</string>
    <string name="name">Your name</string>
    <string name="occupation">Occupation</string>
    <string name="occupationProfessor">Professor</string>
    <string name="occupationStudent">Student</string>
    <string name="office">Office Address</string>
    <string name="phone">Phone</string>
    <string name="email">E-mail</string>

    <string name="login">LOGIN</string>
    <string name="signUp">SIGN UP</string>

    <string name="incorrectMessage">Incorrect username/password</string>
    <string name="userTip1">Please enter username</string>
    <string name="userTip2">Username already exists</string>
    <string name="passwordTip1">Please enter password</string>
    <string name="passwordTip2">The password does not match</string>
    <string name="nameTip">Please enter your full name</string>
    <string name="occupationTip">Please select your occupation</string>
    <string name="officeTip">Please enter your office address</string>

    <string name="enabledChars"> abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>

    <string name="professor_name">Professor Name</string>
    <string name="search">Search</string>

    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>

    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>

    <string-array name="days_sunday_array">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>
</resources>
