<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".activities.LoginActivity">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow>

            <EditText
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/userName"
                android:gravity="center"
                android:layout_column="0"
                android:layout_span="2"/>
        </TableRow>

        <TableRow
            android:layout_marginTop="@dimen/loginPadding">

            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:gravity="center"
                android:layout_column="0"
                android:layout_span="2"/>
        </TableRow>

        <TableRow
            android:layout_marginTop="@dimen/loginPadding">

            <Button
                android:id="@+id/loginButt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginRight="@dimen/loginButtonMargin"
                android:layout_marginLeft="@dimen/loginButtonMargin"
                android:text="@string/login"/>

            <Button
                android:id="@+id/signupButt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/loginButtonMargin"
                android:layout_marginRight="@dimen/loginButtonMargin"
                android:layout_column="1"
                android:text="@string/signUp" />
        </TableRow>


        <TableRow
            android:layout_marginTop="@dimen/loginPadding">

            <TextView
            android:id="@+id/incorrectMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_span="2"
            android:text="@string/incorrectMessage"
            android:gravity="center"
           />
        </TableRow>

    </TableLayout>

</RelativeLayout>